--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -3,7 +3,9 @@
     color:black;
     font-family: 'Fira Sans', sans-serif;
     background:#AFEEEE;
-  
+    border-bottom:10px solid grey;
+    margin-bottom:10px;
+  background:white;
 }
 
 /* .navbar-nav{
