--- a/client/src/components/SavedList/style.css
+++ b/client/src/components/SavedList/style.css
@@ -1,5 +1,15 @@
 .card {
-    background:#F5F5F5;
+    background:#E0E0E0;
     border-radius:5px;
+    color:#2874A6; 
+    
+}
+
+.gigMusician, .gigpay{
+    text-align:center;
+}
+
+.search-list{
+    background:#F5F5F5;
     
 }
