--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 body{
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Fira Sans', sans-serif; */
     background:#AFEEEE;
 }
 
