--- a/client/src/components/SavedList/style.css
+++ b/client/src/components/SavedList/style.css
@@ -1,7 +1,11 @@
 .card {
     background:#E0E0E0;
-    border-radius:5px;
-    color:#2874A6; 
+    border-radius:15px;
+    /* color:#2874A6;  */
+    color:#2E86C1;
+    box-shadow: 0 12px 24px #999, 0 12px 24px #999;
+    font-family: 'Montserrat', sans-serif;
+    padding:10px;
     
 }
 
@@ -10,6 +14,16 @@
 }
 
 .search-list{
+    border-radius:15px;
     background:#F5F5F5;
-    
+    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    margin:20px;
+    padding:25px;
+    font-family: 'Montserrat', sans-serif;
 }
+
+.profile{
+   color:#5499C7;
+}
+
+
