--- a/client/src/components/SavedList/style.css
+++ b/client/src/components/SavedList/style.css
@@ -7,6 +7,9 @@
     box-shadow: 0 12px 24px #999, 0 12px 24px #999;
     font-family: 'Montserrat', sans-serif;
     padding:10px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
   
     
 }
@@ -23,7 +26,9 @@
     margin:20px;
     padding:25px;
     font-family: 'Montserrat', sans-serif;
-  
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .profile{
